syntax = "proto3";
option csharp_namespace = "UserService.Proto";

package UserGrpc;

service UserGrpc {
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  string email = 1;
}

message UserResponse {
  string userName = 1;
  string email = 2;
}